--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <div id="loading"></div>
-    <div id="loading-text" style="display: none; position: relative; top: -8rem; text-align: center;">This will only take a minute</div>
+    <div id="loading-text">This will only take a minute</div>
 
     <div class="upload-new-link">
         <a href="{{ url_for('home_blueprint.home') }}" class="btn new-upload-btn" aria-label="Upload a new image">Upload New</a>
