Update meta description

--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Image color extractor.">
+        <meta name="description" content="Create a color palette from your JPEG/JPG, PNG, WEBP, GIF and SVG images!">
 
         <title> Image Color Palette Generator </title>
 
