--- a/templates/header.html
+++ b/templates/header.html
@@ -25,6 +25,17 @@
         <!--   Custom Stylesheet     -->
         <link rel="stylesheet" href="/static/styles/css/style.min.css">
     </head>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6FM1ETF1BF"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-6FM1ETF1BF');
+    </script>
+
 
     <div class="container-fluid">
         {% if rel_position %}
